--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1,145 +1,294 @@
 /*
+
 To change this license header, choose License Headers in Project Properties.
+
 To change this template file, choose Tools | Templates
+
 and open the template in the editor.
+
 */
+
 /* 
+
     Created on : 25/11/2014, 20:39:40
+
     Author     : Felipe
+
 */
+
 @media (min-width: 992px) { 
+
     .form-sigin{
+
         width: 500px;
+
         margin-top: 50px;
+
         margin-left: auto;
+
         margin-right: auto;
+
     }
+
 }
 
+
+
 body{
+
     padding-top: 70px !important;
+
 }
+
 .form-sigin{
+
     margin-top: 50px;
+
 }
+
 .text-roxo{
+
     color: #9e00a6 !important;
+
 }
+
 /*.dropdown:hover ul:hover{
+
     display: block !important;
+
 }
+
 .dropdown:hover ul{
+
     display: block !important;
+
 }*/
+
 .display{
+
     width: 100% !important;
+
 }
+
 .wrapper{
+
     margin-top: 20px;
+
     padding: 10px !important;
+
 }
+
 .navbar-default{
+
     background-color: #0595cb !important;
+
     min-height: 70px !important;
+
     padding-top: 10px;
+
 }
+
 .navbar-default div div ul li a{
+
     color: #fff !important;
+
 }
+
 .navbar-default div div ul li ul li a{
+
     color: #000 !important;
+
 }
+
 .navbar-default div div .navbar-brand{
+
     color: #fff !important;
+
 }
+
 .navbar-default .navbar-toggle .icon-bar {
+
     background-color: #fff !important;
+
 }
+
 .navbar-default .navbar-toggle:hover .icon-bar, .navbar-default .navbar-toggle:focus .icon-bar {
+
     background-color: #0595cb !important;
+
     color: #0595cb !important;
+
 }
+
 .navbar-nav>li>.dropdown-menu {
+
     margin-top: 10px;
+
 }
+
 @media (max-width: 768px){
+
     .table {
+
         font-size: 70% !important;
+
     }
+
     .dropdown-menu li a, .dropdown-menu li {
+
         color: #ffffff !important;
+
     }
+
     #dropdown-menu li a, #dropdown-menu li {
+
         color: #ffffff !important;
+
     }
+
     .btn {
+
         font-size: 70%;
+
     }
+
 }
+
 .table-bordered thead tr td, .table-bordered tbody tr td, .table-bordered tfoot tr td{
+
     border: 1px solid #eee;
+
 }
+
 .menu-container{
+
     height: 100%;
+
     background-color: #0595cb;
+
     border-color: #e7e7e7;
+
     padding-bottom: 10px !important;
+
     padding-left: 0 !important;
+
     padding-right: 0 !important;
+
     padding-top: 20px !important;
+
     border-right: 5px solid #e7e7e7;
+
     margin: 0 !important;    
+
 }
+
 .menu-container .nav>li>a:hover, .menu-container .nav>li>a:focus {
+
     text-decoration: none;
+
     background-color: #057eab;
+
 }
+
 .menu-dropdown-custom li, .menu-dropdown-custom li a{
+
     width: 100% !important;
+
     color: #fff;
+
 }
+
 .sub-custom{
+
     margin-bottom: 0;
+
     padding-left: 0;
+
     padding-bottom: 15px;
+
     list-style: none;
+
 }
+
 .sub-custom li{
+
     padding-left: 25px !important;
+
     padding-top: 10px;
+
     padding-bottom: 10px;
+
     padding-right: 10px;
+
     position: relative;
+
     display: block;
+
     width: 100%;
+
 }
+
 .sub-custom li:hover, .sub-custom li.active{
+
     background-color: #057eab;
+
 }
+
 .sub-custom li a{
+
     width: 100%;
+
     display: block;
+
     text-decoration: none;
+
     color: #fff;
+
 }
+
 .dropdown-custom .sub-custom{
+
     display: none;
+
     background-color: #058cbf;
+
     display: none;
+
 }
+
 .dropdown-custom.active .sub-custom{
+
     /*display: block;*/
+
 }
+
 .dropdown-custom.active .dropdown-toggle-custom{
+
     color: #fff;    
+
     background-color: #057eab;
+
 }
+
 .header-big{
+
     padding: 15px !important;
+
 }
+
 .header-big h1{    
+
     font-size: 28pt !important;
+
 }
+
 .canvas_map{
+
     min-height: 500px !important; 
+
+}
+
+.modal-body {
+    max-height: calc(100vh - 185px);
+    overflow-y: auto;
 }
